@@ -5,6 +5,16 @@ from test import test_support
 # Skip this test if _tkinter wasn't built.
 test_support.import_module('_tkinter')
 
+this_dir = os.path.dirname(os.path.abspath(__file__))
+lib_tk_test = os.path.abspath(os.path.join(this_dir, os.path.pardir,
+    'lib-tk', 'test'))
+
+with test_support.DirsOnSysPath(lib_tk_test):
+    import runtktests
+
+# Skip test if tk cannot be initialized.
+runtktests.check_tk_availability()
+
 import ttk
 from _tkinter import TclError
 
@@ -13,13 +23,6 @@ try:
 except TclError, msg:
     # assuming ttk is not available
     raise unittest.SkipTest("ttk not available: %s" % msg)
-
-this_dir = os.path.dirname(os.path.abspath(__file__))
-lib_tk_test = os.path.abspath(os.path.join(this_dir, os.path.pardir,
-    'lib-tk', 'test'))
-
-with test_support.DirsOnSysPath(lib_tk_test):
-    import runtktests
 
 def test_main(enable_gui=False):
     if enable_gui:
